fastfood-product-management/k8s/fastfood-product-management-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastfood-product-management-deployment
  labels:
    app: fastfood-product-management
spec:
  replicas: 1
  template:
    metadata:
      name: fastfood-product-management
      labels:
        app: fastfood-product-management
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: fastfood-product-management-container
          image: soatpostech/fastfood-product-management:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
  selector:
    matchLabels:
      app: fastfood-product-management
