fastfood-product-management/k8s/fastfood-product-management-sql-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fastfood-product-management-mysql-statefulset
  labels:
    app: fastfood-product-mananagement-mysql
spec:
  replicas: 1
  template:
    metadata:
      name: fastfood-product-management-mysql
      labels:
        app: fastfood-product-management-mysql
    spec:
      containers:
        - name: fastfood-product-management-mysql-container
          image: mysql:latest
          ports:
            - containerPort: 3306
  selector:
    matchLabels:
      app: fastfood-product-management-mysql
  serviceName: fastfood-product-management-mysql-service
