fastfood-product-management/k8s/fastfood-product-management-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fastfood-product-management-service
spec:
  type: LoadBalancer
  selector:
    app: fastfood-product-management
  ports:
    - port: 8081
      targetPort: 8081
